<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/parent"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.aurensanx.runtempocalculator.MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="fill_parent">
        <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_description"
                android:textSize="10pt">
        </TextView>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="fill_parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="0dp">
            <TextView
                    android:id="@+id/timeId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeText"
                    android:textSize="10pt">
            </TextView>
            <EditText
                    android:id="@+id/hoursId"
                    style="@style/Input.Number"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
            </EditText>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/h"
                    android:textSize="8pt">
            </TextView>
            <EditText
                    android:id="@+id/minutesId"
                    style="@style/Input.Number.MaxLength2"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" android:autoText="false">
            </EditText>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m"
                    android:textSize="8pt">
            </TextView>
            <EditText
                    android:id="@+id/secondsId"
                    style="@style/Input.Number.MaxLength2"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
            </EditText>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s"
                    android:textSize="8pt">
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="0dp">
            <TextView
                    android:id="@+id/distanceId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distanceText"
                    android:textSize="10pt">
            </TextView>
            <EditText
                    android:id="@+id/kilometersId"
                    style="@style/Input.DecimalNumber"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">
            </EditText>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/km"
                    android:textSize="8pt">
            </TextView>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="0dp" android:gravity="center_vertical|center_horizontal">

            <Button
                    android:id="@+id/calculateRythm"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/calculate"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:layout_width="fill_parent">

        <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rythm"
                android:textSize="10pt"
                android:visibility="invisible" android:layout_gravity="center_vertical"
                android:gravity="center_vertical">
        </TextView>

        </LinearLayout>

</LinearLayout>
